minor changes in services, changed db schema